# Q-lab

./: README.md
.devcontainer/: devcontainer.json
.devcontainer/claude_code_default/: devcontainer.json
.devcontainer/claude_code_isolated/: Dockerfile  devcontainer.json
.devcontainer/claude_code_python/: Dockerfile  README.md  devcontainer.json  init-firewall.sh  pyproject.toml  setup.sh
.devcontainer/claude_code_rstudio/: Dockerfile  devcontainer.json  init-firewall.sh
.devcontainer/javascript_firewall/: Dockerfile  devcontainer.json
.devcontainer/python/: devcontainer.json  postCreateCommand.sh
.devcontainer/python-slim/: devcontainer.json  postCreateCommand.sh
.devcontainer/python_firewall/: Dockerfile  devcontainer.json  init-firewall.sh  setup.sh
.devcontainer/rstudio/: devcontainer.json  postCreateCommand.sh
.devcontainer/rstudio_firewall/: Dockerfile  README.md  devcontainer.json  init-firewall.sh
